# solana-transfer-cli

./: Cargo.toml  README.md  config.yaml  sender1.json
src/: main.rs
