[package]
name = "solana-transfer-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
solana-client = "1.18"
solana-sdk = "1.18"
solana-transaction-status = "1.18"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1.38.0", features = ["full"] }
futures = "0.3"
